[package]
edition = "2021"
name = "aleo_prover"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
# members = ["testnet2", "testnet2-zkp", "testnet2-zkp-gpu", "testnet3-storage"]
members = ["testnet3-storage"]
exclude = ["testnet2", "testnet2-zkp", "testnet2-zkp-gpu"]

# [dependencies.testnet2-zkp]
# path = "./testnet2-zkp"
