[package]
edition = "2021"
name = "testnet2-zkp-gpu"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[features]
cuda = ["snarkvm-algorithms/cuda"]
default = ["cuda"]

[dependencies]
futures = {version = "0.3.21"}
rand = {version = "0.8.5"}
rand_chacha = {version = "0.3"}
rayon = {version = "1.5.3"}
tokio = {version = "1.19.2", features = ["full"]}
num_cpus = { version = "1.13.1" } 
ansi_term = "0.12.1"
clap = { version = "3.1", features = [ "derive" ] } 
tracing = { version = "0.1.35"  }
tracing-subscriber = { version = "0.3.15" }

[dev-dependencies]
criterion = {version = "0.3.5"}

[dependencies.snarkvm]
git = "https://github.com/HarukaMa/snarkVM.git"
branch = "gpu-index"

[dependencies.snarkvm-algorithms]
git = "https://github.com/HarukaMa/snarkVM.git"
branch = "gpu-index"