[package]
edition = "2021"
name = "testnet3-storage"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aleo-std = "0.1.15"
bincode = "1.2.1"
indexmap = {version = "1.9", features = ["rayon"]}
once_cell = {version = "1.13.0"}
parking_lot = {version = "0.12"}
rocksdb = {version = "0.19.0"}
[dependencies.anyhow]
version = "1"
[dependencies.serde_json]
version = "1"
[dependencies.serde]
version = "1"
[dependencies.tracing]
version = "0.1"
[dependencies.tracing-subscriber]
features = ["env-filter", "parking_lot"]
version = "0.3"
[dependencies.thiserror]
version = "1.0"

[dependencies.snarkos]
git = "https://github.com/AleoHQ/snarkOS.git"
rev = "316193ab"
# path = "/root/vscode/snarkOS"

[dependencies.snarkos-node-store]
path = "./store"

[dependencies.snarkvm]
git = "https://github.com/AleoHQ/snarkVM.git"
version = "0.9.4"
features = ["circuit", "console", "parallel", "utilities"]
# path = "/root/vscode/snarkVM"
