[package]
edition = "2021"
name = "zkp-testnet3"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[features]
cuda = ["snarkvm-algorithms/cuda"]

[[bench]]
harness = false
name = "testnet3_prove"
path = "benches/prove.rs"

[dependencies]
ansi_term = "0.12.1"
clap = {version = "4.0.14", features = ["derive"]}
futures = {version = "0.3.21"}
num_cpus = {version = "1.13.1"}
rand = {version = "0.8.5"}
rand_chacha = {version = "0.3"}
rayon = {version = "1.5.3"}
tokio = {version = "1.19.2", features = ["full"]}
tracing = {version = "0.1.35"}
tracing-subscriber = {version = "0.3.15"}

[dependencies.snarkvm]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "3e8dd58ad"

[dependencies.snarkvm-algorithms]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "3e8dd58ad"

[dev-dependencies]
criterion = {version = "0.3.5"}
