[package]
edition = "2021"
name = "zkp-testnet2-gpu"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[features]
cuda = ["snarkvm-algorithms/cuda"]

[dependencies]
futures = {version = "0.3.21"}
rand = {version = "0.8.5"}
rand_chacha = {version = "0.3"}
rayon = {version = "1.5.3"}
tokio = {version = "1.19.2", features = ["full"]}
num_cpus = { version = "1.13.1" } 

[dev-dependencies]
criterion = {version = "0.3.5"}

[dependencies.snarkvm]
git = "https://github.com/HarukaMa/snarkVM.git"
branch = "gpu-index"

[dependencies.snarkvm-algorithms]
git = "https://github.com/HarukaMa/snarkVM.git"
branch = "gpu-index"

[dependencies.snarkvm-curves]
git = "https://github.com/HarukaMa/snarkVM.git"
branch = "gpu-index"

[dependencies.snarkvm-fields]
git = "https://github.com/HarukaMa/snarkVM.git"
branch = "gpu-index"

[dependencies.snarkvm-r1cs]
git = "https://github.com/HarukaMa/snarkVM.git"
branch = "gpu-index"

[dependencies.snarkvm-utilities]
git = "https://github.com/HarukaMa/snarkVM.git"
branch = "gpu-index"

[dependencies.snarkvm-marlin]
git = "https://github.com/HarukaMa/snarkVM.git"
branch = "gpu-index"

[dependencies.snarkvm-polycommit]
git = "https://github.com/HarukaMa/snarkVM.git"
branch = "gpu-index"