[package]
name = "zkp-testnet3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
rand = { version = "0.8.5" }
rand_chacha = { version = "0.3" }
tokio = { version = "1.19.2", features = ["full"] }
futures = { version = "0.3.21" }
rayon = { version = "1.5.3" }

[dependencies.snarkvm]
path = "../../snarkVM"

[dependencies.snarkvm-algorithms]
path = "../../snarkVM/algorithms"

[dependencies.snarkvm-curves]
path = "../../snarkVM/curves"

[dependencies.snarkvm-fields]
path = "../../snarkVM/fields"

[dependencies.snarkvm-r1cs]
path = "../../snarkVM/r1cs"

[dependencies.snarkvm-utilities]
path = "../../snarkVM/utilities"

[dev-dependencies]
criterion = { version = "0.3.5" }

[[bench]]
name = "testnet3_marlin"
path = "benches/algorithm_marlin.rs"
harness = false
