[package]
name = "zkp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5" }
rand_chacha = { version = "0.3" }
rayon = { version = "1.5.3" } 
tokio = { version = "1.19.2", features = ["full"] }
futures = { version = "0.3.21" }

[dependencies.snarkvm]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "22f3aa8f5"

[dependencies.snarkvm-algorithms]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "22f3aa8f5"


[workspace]
members = []