[package]
name = "zkp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cuda = ["snarkvm-algorithms/cuda"]


[dependencies]
rand = { version = "0.8.5" }
rand_chacha = { version = "0.3" }
rayon = { version = "1.5.3" } 
tokio = { version = "1.19.2", features = ["full"] }
futures = { version = "0.3.21" }

criterion = { version = "0.3.5" } # 基准测试工具

[dependencies.snarkvm]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "09a141a88"
# 09a141a88 20220814

[dependencies.snarkvm-algorithms]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "09a141a88"

[dependencies.snarkvm-curves]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "09a141a88"

[dependencies.snarkvm-fields]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "09a141a88"

[dependencies.snarkvm-r1cs]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "09a141a88"

[dependencies.snarkvm-utilities]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "09a141a88"


[[bench]]
name = "marlin"
path = "benches/algorithm_marlin.rs"
harness = false

# [workspace]
# members = []